deployment/k8s/basic-auth/tilt-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tilt-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Tilt Console'
